--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,14 @@
-$primary-color: #f4e041;
-$secondary-color: #00bdd3;
-$bg-color: #f8f8f8;
+@use "./styles/variables.scss" as var;
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 body {
-  background: $bg-color;
+  margin: 0;
+  padding: 0;
+  background: var.$bg-color;
   font-family: "Nunito", sans-serif;
 }
