--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -15,4 +15,9 @@
     padding-left: 60px;
     padding-right: 60px;
   }
+
+  @media (min-width: 1168px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
