--- a/src/components/form/input/Input.scss
+++ b/src/components/form/input/Input.scss
@@ -22,10 +22,17 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
+  background-color: transparent;
 
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+
+  &:focus {
+    outline: none;
+    border-color: #d0cfcf;
+    box-shadow: none;
+  }
 
   &::placeholder {
     color: #7e7e7e;
@@ -33,6 +40,11 @@
 
   &__error {
     border: 2px solid #cb3d40;
+
+    &:focus {
+      border: 2px solid #cb3d40;
+      box-shadow: none;
+    }
   }
 
   @media (min-width: 768px) {
@@ -63,5 +75,27 @@
     font-size: 12px;
     line-height: 14px;
     padding: 0 4px;
+  }
+}
+
+.input__message-container {
+  .input__error-message {
+    margin-top: 4px;
+    margin-left: 16px;
+    margin-bottom: 0;
+    color: #cb3d40;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  .input__helper-message {
+    margin-top: 4px;
+    margin-left: 16px;
+    margin-bottom: 0;
+    color: #7e7e7e;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
   }
 }
