--- a/src/components/form/select/SelectPosition.scss
+++ b/src/components/form/select/SelectPosition.scss
@@ -1,4 +1,6 @@
-.button-container {
+@use "../../../styles/variables" as var;
+
+.select-button-container {
   display: flex;
   flex-direction: column;
   gap: 7px;
@@ -24,7 +26,7 @@
       align-items: center;
 
       &.active {
-        border: 1px solid #00bdd3;
+        border: 1px solid var.$secondary-color;
 
         &::after {
           content: "";
@@ -32,9 +34,19 @@
           width: 10px;
           height: 10px;
           border-radius: 50%;
-          background-color: #00bdd3;
+          background-color: var.$secondary-color;
         }
       }
     }
   }
+}
+
+.select-error-message {
+  margin-top: 4px;
+  margin-left: 16px;
+  margin-bottom: 0;
+  color: var.$error-color;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
 }
